@@ -63,6 +63,7 @@ public:
 	void	clear(Uint8 *,int);
 	bool	start_music(int num,bool continuous,int bank=0);
 	void	start_music(const char *fname,int num,bool continuous);
+	void	start_music(XMIDI *midfile,bool continuous);
 	void	stop_music();
 	void	play_sound_effect (int num);
 	bool	start_speech(int num,bool wait=false);
