@@ -68,6 +68,7 @@ public:
 	void	start_music(const char *fname,int num,bool continuous=false);
 	void	start_track(int num,bool continuous=false,int bank=0);
 	void	start_track(const char *fname,int num,bool continuous=false);
+	void	start_track(XMIDI *midfile, bool continuous=false);
 	void	start_sound_effect(int num);
 
 	void	stop_music();
