@@ -11,3 +11,4 @@ Entry		File
 5		Exult Palette 0
 6		"Black Gate" shape
 7		"Serpent Isle" shape
+8		Banner Music
