@@ -1,3 +1,9 @@
+2000-11-02  Tristan Tarrant  <nadir@users.sourceforge.net>
+
+	* tools/u7shpload.c: Beginnings of tile (8x8) support
+	* data/marketpl.mid: MIDI for intro menu
+	* audio/Audio.*, audio/Midi.*: add methods for loading generic MIDI
+
 2000-10-30  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* usecode.cc: Kludges for Test of Courage.
